<resources>
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="copyright">All rights reserved to Ebdaa Tech company &#169; 2018</string>
    <string name="skip">Skip</string>
    <string name="mobile">mobile</string>
    <string name="remember">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forget_password">Did you forget password</string>
    <string name="send">Send</string>
    <string name="forgetpasswordtxt">Forget Password</string>
    <string name="change_password">Change Password</string>
    <string name="verfication_code">verfication code</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="last_donetion_date">Last donetion Date</string>
    <string name="blood_type">Blood Type</string>
    <string name="birthday">Birthday</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tab1">Article</string>
    <string name="tab2">Donation orders</string>
    <string name="awareness_way_from_diseases">Awareness way from diseases</string>
    <string name="insert_search_word_here">Insert search word here...</string>
    <string name="generatedtext">generatedtext</string>
    <string name="details">Details</string>
    <string name="call">call</string>
    <string name="donation_request">Donation Request</string>
    <string name="age">Age</string>
    <string name="hospital">hospital</string>
    <string name="hospital_address">hospital address</string>
    <string name="notes">Notes</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_request">Send Request</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
