<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    tools:context=".ui.fragment.ForgetPasswordFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:text="@string/forgetpasswordtxt"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/forgetPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/sendcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/green"
        android:text="@string/send"
        android:textAlignment="center"
        android:textColor="@color/white" />
</LinearLayout>