<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".ui.fragment.ChangePasswordFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo2" />
    <EditText
        android:id="@+id/verficationcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/verfication_code"
        android:inputType="text"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/gray" />
    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/gray" />
    <EditText
        android:id="@+id/confirmnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_style"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/changepasswordbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/green"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/white" />
</LinearLayout>