<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical"
    tools:context=".ui.fragment.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/toolbarTheme">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/darkBlue" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/regName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/regBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:drawableLeft="@drawable/dateicon"
                android:ems="10"
                android:hint="@string/birthday"
                android:inputType="date"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText

                android:id="@+id/regBloodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/blood_type"
                android:inputType="textPersonName"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText

                android:id="@+id/regLastDonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:drawableLeft="@drawable/dateicon"
                android:ems="10"
                android:hint="@string/last_donetion_date"
                android:inputType="date"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp">

            <Spinner
                android:id="@+id/regGovernorate"
                style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                <View
                    android:id="@+id/view"

                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/lightgray"
                    android:visibility="visible"
                    />

            <Spinner
                android:id="@+id/regCity"
                style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            </LinearLayout>
            <EditText
                android:id="@+id/regPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/mobile"

                android:inputType="phone"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/regPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"

                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/regPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/RegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/darkBlue"
                android:text="Sign Up"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>