<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical"
    tools:context=".ui.fragment.DonationRequestFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/requestname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/requestage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="numberDecimal"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />


            <EditText
                android:id="@+id/requestbloodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/blood_type"
                android:inputType="textPersonName"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/casenumber"
                    style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/requesthospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/hospital"
                android:inputType="textPersonName"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/requesthospitaladdress"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/reg_edittext_style"
                    android:ems="10"
                    android:hint="@string/hospital_address"
                    android:inputType="textPersonName"
                    android:textColor="@color/darkBlue"
                    android:textColorHint="@color/gray" />

                <ImageButton
                    android:id="@+id/requestlocation"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/white"
                    android:src="@drawable/locationbtnicon" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/requestgovernorate"
                    style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/view"

                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/lightgray"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/requestcity"
                    style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/requestPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/mobile"

                android:inputType="phone"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_edittext_style"
                android:ems="10"
                android:hint="@string/notes"
                android:gravity="start|top"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/RegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/darkBlue"
                android:text="@string/send_request"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>